--- a/package.json
+++ b/package.json
@@ -14,9 +14,29 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "gatsby": "^4.8.0",
+    "gatsby-plugin-image": "^2.8.0",
+    "gatsby-plugin-netlify": "^4.1.0",
+    "gatsby-plugin-netlify-cms": "^6.8.0",
+    "gatsby-plugin-react-helmet": "^5.8.0",
+    "gatsby-plugin-sass": "^5.8.0",
+    "gatsby-plugin-sharp": "^4.8.0",
+    "gatsby-remark-copy-linked-files": "^5.8.0",
+    "gatsby-remark-images": "^6.8.0",
+    "gatsby-remark-relative-images": "^2.0.2",
+    "gatsby-remark-relative-images-v2": "^0.1.5",
+    "gatsby-source-filesystem": "^4.8.0",
+    "gatsby-source-google-calendar": "^1.1.3",
+    "gatsby-transformer-remark": "^5.8.0",
+    "gatsby-transformer-sharp": "^4.8.0",
+    "lodash": "^4.17.21",
+    "netlify-cms-app": "^2.15.66",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-bootstrap": "^2.1.2",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
+    "sass": "^1.49.8"
   },
   "devDependencies": {
     "prettier": "^2.5.1"
