--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -145,3 +145,100 @@ collections:
                   { label: Position, name: position, widget: string },
                 ],
             }
+      - file: src/pages/about/index.md
+        label: About
+        name: about
+        fields:
+          - {
+              label: Template Key,
+              name: templateKey,
+              widget: hidden,
+              default: about-page,
+            }
+          - { label: Title, name: title, widget: string }
+          - {
+              label: Header,
+              name: header,
+              widget: object,
+              fields:
+                [
+                  { label: Heading, name: heading, widget: string },
+                  { label: Subheading, name: subheading, widget: string },
+                ],
+            }
+          - {
+              label: Image,
+              name: image,
+              widget: object,
+              fields:
+                [
+                  { label: Alt, name: alt, widget: string },
+                  { label: Image, name: image, widget: image },
+                ],
+            }
+          - {
+              label: Why,
+              name: why,
+              widget: object,
+              fields:
+                [
+                  { label: Heading, name: heading, widget: string },
+                  {
+                    label: Reasons,
+                    name: reasons,
+                    widget: list,
+                    fields:
+                      [
+                        { label: Icon, name: icon, widget: image },
+                        { label: Heading, name: heading, widget: string },
+                        { label: Text, name: text, widget: text },
+                      ],
+                  },
+                ],
+            }
+          - {
+              label: Rocket,
+              name: rocket,
+              widget: object,
+              fields:
+                [
+                  { label: Heading, name: heading, widget: string },
+                  { label: Text, name: text, widget: text },
+                  {
+                    label: Image,
+                    name: image,
+                    widget: object,
+                    fields:
+                      [
+                        { label: Alt, name: alt, widget: string },
+                        { label: Image, name: image, widget: image },
+                      ],
+                  },
+                  {
+                    label: Quote,
+                    name: quote,
+                    widget: object,
+                    fields:
+                      [
+                        { label: Text, name: text, widget: text },
+                        { label: Name, name: name, widget: string },
+                        { label: Position, name: position, widget: string },
+                      ],
+                  },
+                ],
+            }
+          - {
+              label: Companies,
+              name: companies,
+              widget: object,
+              fields:
+                [
+                  { label: Heading, name: heading, widget: string },
+                  {
+                    label: Icons,
+                    name: icons,
+                    widget: list,
+                    fields: [{ label: Image, name: image, widget: image }],
+                  },
+                ],
+            }
