--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-plugin-image": "^2.8.0",
     "gatsby-plugin-netlify": "^4.1.0",
     "gatsby-plugin-netlify-cms": "^6.8.0",
+    "gatsby-plugin-no-sourcemaps": "^4.8.0",
     "gatsby-plugin-react-helmet": "^5.8.0",
     "gatsby-plugin-sass": "^5.8.0",
     "gatsby-plugin-sharp": "^4.8.0",
