--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -254,3 +254,81 @@ collections:
                   },
                 ],
             }
+      - file: src/pages/faq/index.md
+        label: Faq
+        name: faq
+        fields:
+          - {
+              label: Template Key,
+              name: templateKey,
+              widget: hidden,
+              default: faq-page,
+            }
+          - { label: Title, name: title, widget: string }
+          - {
+              label: Header,
+              name: header,
+              widget: object,
+              fields:
+                [
+                  { label: Heading, name: heading, widget: string },
+                  { label: Smalltext, name: smalltext, widget: string },
+                ],
+            }
+          - {
+              label: General,
+              name: general,
+              widget: object,
+              fields:
+                [
+                  { label: Heading, name: heading, widget: string },
+                  {
+                    label: Questions,
+                    name: questions,
+                    widget: list,
+                    fields:
+                      [
+                        { label: Question, name: question, widget: string },
+                        { label: Answer, name: answer, widget: markdown },
+                      ],
+                  },
+                ],
+            }
+          - {
+              label: Codingbasics,
+              name: codingbasics,
+              widget: object,
+              fields:
+                [
+                  { label: Heading, name: heading, widget: string },
+                  {
+                    label: Questions,
+                    name: questions,
+                    widget: list,
+                    fields:
+                      [
+                        { label: Question, name: question, widget: string },
+                        { label: Answer, name: answer, widget: markdown },
+                      ],
+                  },
+                ],
+            }
+          - {
+              label: Softwareengineeringbootcamp,
+              name: softwareengineeringbootcamp,
+              widget: object,
+              fields:
+                [
+                  { label: Heading, name: heading, widget: string },
+                  {
+                    label: Questions,
+                    name: questions,
+                    widget: list,
+                    fields:
+                      [
+                        { label: Question, name: question, widget: string },
+                        { label: Answer, name: answer, widget: markdown },
+                      ],
+                  },
+                ],
+            }
