--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "bootstrap": "^5.1.3",
     "gatsby": "^4.8.0",
+    "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-image": "^2.8.0",
     "gatsby-plugin-netlify": "^4.1.0",
     "gatsby-plugin-netlify-cms": "^6.8.0",
@@ -37,6 +38,7 @@
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-scroll": "^1.8.5",
     "sass": "^1.49.8"
   },
   "devDependencies": {
