--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -289,7 +289,7 @@ collections:
                     fields:
                       [
                         { label: Question, name: question, widget: string },
-                        { label: Answer, name: answer, widget: markdown },
+                        { label: Answers, name: answers, widget: text },
                       ],
                   },
                 ],
@@ -308,7 +308,7 @@ collections:
                     fields:
                       [
                         { label: Question, name: question, widget: string },
-                        { label: Answer, name: answer, widget: markdown },
+                        { label: Answers, name: answers, widget: text },
                       ],
                   },
                 ],
@@ -327,7 +327,7 @@ collections:
                     fields:
                       [
                         { label: Question, name: question, widget: string },
-                        { label: Answer, name: answer, widget: markdown },
+                        { label: Answers, name: answers, widget: text },
                       ],
                   },
                 ],
