--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -352,6 +352,26 @@ collections:
                   { label: Heading, name: heading, widget: string },
                   { label: Subheading, name: subheading, widget: string },
                   {
+                    label: Image1,
+                    name: image1,
+                    widget: object,
+                    fields:
+                      [
+                        { label: Image, name: image, widget: image },
+                        { label: Alt, name: alt, widget: string },
+                      ],
+                  },
+                  {
+                    label: Image2,
+                    name: image2,
+                    widget: object,
+                    fields:
+                      [
+                        { label: Image, name: image, widget: image },
+                        { label: Alt, name: alt, widget: string },
+                      ],
+                  },
+                  {
                     label: Reasons,
                     name: reasons,
                     widget: list,
@@ -366,6 +386,7 @@ collections:
               fields:
                 [
                   { label: Heading, name: heading, widget: string },
+                  { label: Sidebarlabel, name: sidebarlabel, widget: string },
                   {
                     label: Studentexperience,
                     name: studentexperience,
@@ -377,47 +398,48 @@ collections:
                         { label: Text, name: text, widget: text },
                       ],
                   },
-                ],
-            }
-          - {
-              label: Testimonial,
-              name: testimonial,
-              widget: object,
-              fields:
-                [
-                  { label: quote, name: quote, widget: text },
-                  { label: Image, name: image, widget: image },
-                  { label: Name, name: name, widget: string },
-                  { label: Position, name: position, widget: string },
-                ],
-            }
-          - {
-              label: Learningstyle,
-              name: learningstyle,
-              widget: object,
-              fields:
-                [
-                  { label: Heading, name: heading, widget: string },
                   {
-                    label: Card,
-                    name: card,
-                    widget: list,
+                    label: Testimonial,
+                    name: testimonial,
+                    widget: object,
                     fields:
                       [
+                        { label: quote, name: quote, widget: text },
                         { label: Image, name: image, widget: image },
+                        { label: Name, name: name, widget: string },
+                        { label: Position, name: position, widget: string },
+                      ],
+                  },
+                  {
+                    label: Learningstyle,
+                    name: learningstyle,
+                    widget: object,
+                    fields:
+                      [
                         { label: Heading, name: heading, widget: string },
-                        { label: Text, name: text, widget: text },
+                        {
+                          label: Card,
+                          name: card,
+                          widget: list,
+                          fields:
+                            [
+                              { label: Image, name: image, widget: image },
+                              { label: Heading, name: heading, widget: string },
+                              { label: Text, name: text, widget: text },
+                            ],
+                        },
                       ],
                   },
                 ],
             }
           - {
-              label: Technicalknowledge,
-              name: technicalknowledge,
+              label: Curriculum,
+              name: curriculum,
               widget: object,
               fields:
                 [
                   { label: Heading, name: heading, widget: string },
+                  { label: Sidebarlabel, name: sidebarlabel, widget: string },
                   {
                     label: Topics,
                     name: topics,
@@ -433,6 +455,7 @@ collections:
               fields:
                 [
                   { label: Heading, name: heading, widget: string },
+                  { label: Sidebarlabel, name: sidebarlabel, widget: string },
                   {
                     label: Profile,
                     name: profile,
@@ -454,6 +477,7 @@ collections:
                 [
                   { label: Heading, name: heading, widget: string },
                   { label: Subheading, name: subheading, widget: string },
+                  { label: Sidebarlabel, name: sidebarlabel, widget: string },
                   { label: Cardheading, name: cardheading, widget: string },
                   { label: Prevcost, name: prevcost, widget: string },
                   { label: Currentcost, name: currentcost, widget: string },
@@ -475,6 +499,7 @@ collections:
                   [
                     { label: Heading, name: heading, widget: string },
                     { label: Subheading, name: subheading, widget: string },
+                    { label: Sidebarlabel, name: sidebarlabel, widget: string },
                   ],
               },
             }
@@ -486,14 +511,16 @@ collections:
                 [
                   { label: Heading, name: heading, widget: string },
                   { label: Subheading, name: subheading, widget: string },
+                  { label: Sidebarlabel, name: sidebarlabel, widget: string },
                   {
                     label: Lesson,
                     name: lesson,
                     widget: list,
                     fields:
                       [
-                        { label: Week, name: week, widget: string },
-                        { label: Name, name: name, widget: string },
+                        { label: Number, name: number, widget: string },
+                        { label: Time, name: time, widget: string },
+                        { label: Title, name: title, widget: string },
                         { label: Preclass, name: preclass, widget: text },
                         { label: Inclass, name: inclass, widget: text },
                         { label: Project, name: project, widget: text },
