--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-scroll": "^1.8.5",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1",
+    "remark-preset-lint-recommended": "^6.1.2",
     "sass": "^1.49.8"
   },
   "devDependencies": {
