--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@hubspot/api-client": "^6.0.1-beta3",
     "bootstrap": "^5.1.3",
+    "dotenv": "^16.0.0",
     "gatsby": "^4.8.0",
     "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-image": "^2.8.0",
