--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.0",
     "gatsby": "^4.8.0",
-    "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-image": "^2.8.0",
     "gatsby-plugin-netlify": "^4.1.0",
     "gatsby-plugin-netlify-cms": "^6.8.0",
@@ -41,10 +40,8 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-scroll": "^1.8.5",
-    "remark": "^14.0.2",
-    "remark-html": "^15.0.1",
-    "remark-preset-lint-recommended": "^6.1.2",
-    "sass": "^1.49.8"
+    "sass": "^1.49.8",
+    "showdown": "^2.0.3"
   },
   "devDependencies": {
     "prettier": "^2.5.1"
