--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.0",
     "gatsby": "^4.8.0",
+    "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-image": "^2.8.0",
     "gatsby-plugin-netlify": "^4.1.0",
     "gatsby-plugin-netlify-cms": "^6.8.0",
