--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby": "^4.8.0",
     "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-image": "^2.8.0",
+    "gatsby-plugin-manifest": "^4.9.1",
     "gatsby-plugin-netlify": "^4.1.0",
     "gatsby-plugin-netlify-cms": "^6.8.0",
     "gatsby-plugin-no-sourcemaps": "^4.8.0",
