--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "@hubspot/api-client": "^6.0.1-beta3",
+    "@sentry/node": "^6.18.2",
+    "@sentry/tracing": "^6.18.2",
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.0",
     "gatsby": "^4.8.0",
