--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -250,6 +250,7 @@ collections:
                         { label: Image, name: image, widget: image },
                         { label: Name, name: name, widget: string },
                         { label: Position, name: position, widget: string },
+                        { label: Description, name: description, widget: text },
                         {
                           label: Experience,
                           name: experience,
