--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby": "^4.7.1",
     "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-google-gtag": "^4.10.0",
+    "gatsby-plugin-hotjar": "^1.1.1",
     "gatsby-plugin-image": "^2.8.0",
     "gatsby-plugin-manifest": "^4.9.1",
     "gatsby-plugin-netlify": "^4.1.0",
