--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -775,7 +775,7 @@ collections:
                 [
                   { label: Heading, name: heading, widget: string },
                   { label: Sidebarlabel, name: sidebarlabel, widget: string },
-                  { label: Subheading, name: subheading, widget: text },
+                  { label: Subheading, name: subheading, widget: markdown },
                   {
                     label: Schedule,
                     name: schedule,
