--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.1",
+    "react-google-recaptcha": "^2.1.0",
     "react-helmet": "^6.1.0",
     "sass": "^1.49.8",
     "showdown": "^2.0.3"
